Fix padding issue on safari
Also unified the way to do the "reveal" hack accross platform.
margin-bottom doesn't work on safari iOS (& safari desktop) but
padding-bottom is working on all platform so we should stick to it.

--- a/src/app/components/footer/footer.less
+++ b/src/app/components/footer/footer.less
@@ -56,8 +56,8 @@
 
 
 @media screen and (max-width: @screen-xs-max){
-    div.inner {
-        margin-bottom: 0px !important;
+    div.main {
+        padding-bottom: 0px !important;
     }
     .footer {
         position: static;
